

public static class StaticAnimation  {
    public static string Turn = "Turn";
    public static string Forward = "Forward";
    public static string Onground = "OnGround";
    public static string Jump = "Jump";
    public static string JumpLeg = "JumpLeg";
    public static string Crouch = "Crouch";
    public static string StateGrounded = "Ground";
    public static string StateAirBourn = "AirBourn";
    public static string FirePistol = "FirePistol";
    public static string IdlePistol = "IdlePistol";
}
